--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -31,7 +31,7 @@
                android:gravity="center_vertical"
                android:orientation="horizontal">
 
-               <ImageView
+               <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgProfileGame"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
