--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/txtQuestion"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <include
@@ -64,20 +64,6 @@
                 android:fontFamily="@font/lato_bold"
                 android:textSize="25sp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/lato_bold"
-                android:text="/"
-                android:textSize="25sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/lato_bold"
-                android:text="05"
-                android:textColor="@color/colorOptionMenuHistory"
-                android:textSize="25sp" />
         </LinearLayout>
 
 
@@ -135,14 +121,17 @@
 
                 <Button
                     android:id="@+id/txtopcone"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:background="@color/colorAccent"
-                    android:fontFamily="@font/lato_regular"
-                    android:gravity="center"
-                    android:textColor="@color/colorQuestionText"
-                    android:textSize="18sp" />
+
+                    android:background="#E41313"
+                    android:backgroundTint="#E99C03"
+                    android:elevation="3dp"
+
+                    android:text="option 1"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
 
             </LinearLayout>
@@ -156,14 +145,17 @@
 
                 <Button
                     android:id="@+id/txtopctwo"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:background="@color/colorAccent"
-                    android:fontFamily="@font/lato_regular"
-                    android:gravity="center"
-                    android:textColor="@color/colorQuestionText"
-                    android:textSize="18sp" />
+
+                    android:background="#E41313"
+                    android:backgroundTint="#E99C03"
+                    android:elevation="3dp"
+
+                    android:text="option 2"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
 
             </LinearLayout>
@@ -177,14 +169,17 @@
 
                 <Button
                     android:id="@+id/txtopcthree"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:background="@color/colorAccent"
-                    android:fontFamily="@font/lato_regular"
-                    android:gravity="center"
-                    android:textColor="@color/colorQuestionText"
-                    android:textSize="18sp" />
+
+                    android:background="#E41313"
+                    android:backgroundTint="#E99C03"
+                    android:elevation="3dp"
+
+                    android:text="option 3"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
 
             </LinearLayout>
