--- a/app/src/main/res/layout/activity_history_list_item.xml
+++ b/app/src/main/res/layout/activity_history_list_item.xml
@@ -12,6 +12,7 @@
         android:id="@+id/imgHistoryOne"
         android:layout_width="110dp"
         android:layout_height="152dp"
+        app:layout_marginStart="15dp"
         android:contentDescription="@string/app_name"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
